--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,15 @@ dependencies:
     sdk: flutter
 
 
-
-
+  decimal: ^2.2.0
+  expandable_sliver_list: ^4.1.0
+  diffutil_sliverlist: ^0.5.1
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  fl_chart: ^0.50.6
+
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +39,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+
+
+  intl: 0.17.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
