--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
 	"cSpell.words": [
+		"ARGB",
 		"Bezier",
 		"cupertino",
 		"diffutil",
+		"fullscreen",
+		"huobiwallet",
 		"listview",
 		"Reclip",
 		"Reorderable",
