--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,13 @@ dependencies:
   expandable_sliver_list: ^4.1.0
   diffutil_sliverlist: ^0.5.1
   
+  syncfusion_flutter_sliders: ^20.1.56
+
+  audio_video_progress_bar: ^0.10.0
+
+  url_launcher: ^6.1.2
+  
+  fluent_ui: ^3.12.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
